--- a/proyecto/locale/en/LC_MESSAGES/django.po
+++ b/proyecto/locale/en/LC_MESSAGES/django.po
@@ -18,8 +18,8 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: .\templates\app\index.html:40
-msgid "SOBRE MÍ"
-msgstr "ABOUT ME"
+msgid "INICIO"
+msgstr "HOME"
 
 #: .\templates\app\index.html:44
 msgid "TRATAMIENTOS"
